dot-net-wechat-dev-intro : update index.html

--- a/dot-net-wechat-dev-intro/index.html
+++ b/dot-net-wechat-dev-intro/index.html
@@ -109,7 +109,9 @@
 <h2 id="-">记账机器人的实现</h2>
 <ol>
 <li>下载WeiXinMPSDK的.NetFx 4.0版本，编译部署到本地</li>
-<li>配置NATAPP，确保外网能访问</li>
+<li>部署网站到本地 IIS</li>
+<li>配置NATAPP，确保外网能访问本地 IIS</li>
+
 <li>处理用户关注事件：<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421140454&amp;token=&amp;lang=zh_CN">接收事件推送</a></li>
 <li>处理消息自动回复：<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421140453&amp;token=&amp;lang=zh_CN">接收普通消息</a></li>
 </ol>
