update weixin doc link

--- a/dot-net-wechat-dev-intro/index.html
+++ b/dot-net-wechat-dev-intro/index.html
@@ -93,11 +93,11 @@
 <ol>
 <li>微信公众号的分类：订阅号，服务号，企业号，三者有<a href="https://kf.qq.com/faq/140806zARbmm140826M36RJF.html">区别</a>。个人可以申请到订阅号和企业号，但是无法申请认证。</li>
 <li>开发和测试可以使用测试号，申请很方便。<a href="http://mp.weixin.qq.com/debug/cgi-bin/sandbox?t=sandbox/login">测试号申请入口</a></li>
-<li>微信公众号的原始ID，AppID（应用ID），AppSecret（应用密钥），<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421140183&amp;token=&amp;lang=zh_CN">access_token</a>，</li>
+<li>微信公众号的原始ID，AppID（应用ID），AppSecret（应用密钥），<a href="http://mp.weixin.qq.com/wiki/11/0e4b294685f817b95cbed85ba5e82b8f.html">access_token</a>，</li>
 <li>URL(服务器地址，必须是80端口或者443端口)，Token(令牌) ，EncodingAESKey(消息加解密密钥)。</li>
 <li>openid</li>
 <li>域名：业务域名，JS接口安全域名，OAuth网页授权回调域名。域名必须备案。</li>
-<li>接入指南：<a href="https://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421135319&amp;token=&amp;lang=zh_CN">微信公众平台接入指南</a></li>
+<li>接入指南：<a href="http://mp.weixin.qq.com/wiki/17/2d4265491f12608cd170a95559800f2d.html">微信公众平台接入指南</a></li>
 </ol>
 <h2 id="-">准备工作</h2>
 <ol>
@@ -109,17 +109,15 @@
 <h2 id="-">记账机器人的实现</h2>
 <ol>
 <li>下载WeiXinMPSDK的.NetFx 4.0版本，编译部署到本地</li>
-<li>部署网站到本地 IIS</li>
-<li>配置NATAPP，确保外网能访问本地 IIS</li>
-
-<li>处理用户关注事件：<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421140454&amp;token=&amp;lang=zh_CN">接收事件推送</a></li>
-<li>处理消息自动回复：<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421140453&amp;token=&amp;lang=zh_CN">接收普通消息</a></li>
+<li>配置NATAPP，确保外网能访问</li>
+<li>处理用户关注事件：<a href="http://mp.weixin.qq.com/wiki/2/5baf56ce4947d35003b86a9805634b1e.html">接收事件推送</a></li>
+<li>处理消息自动回复：<a href="http://mp.weixin.qq.com/wiki/10/79502792eef98d6e0c6e1739da387346.html">接收普通消息</a></li>
 </ol>
 <h2 id="-js-sdk-demo">微信JS SDK demo</h2>
 <ol>
 <li>配置JS接口安全域名</li>
-<li>自定义菜单 API ：<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421141013&amp;token=&amp;lang=zh_CN">自定义菜单创建接口</a></li>
-<li>扫一扫及分享到朋友圈：<a href="http://mp.weixin.qq.com/wiki?t=resource/res_main&amp;id=mp1421141115&amp;token=&amp;lang=zh_CN">微信JS-SDK说明文档</a></li>
+<li>自定义菜单 API ：<a href="http://mp.weixin.qq.com/wiki/13/43de8269be54a0a6f64413e4dfa94f39.html">自定义菜单创建接口</a></li>
+<li>扫一扫及分享到朋友圈：<a href="http://mp.weixin.qq.com/wiki/7/aaa137b55fb2e0456bf8dd9148dd613f.html">微信JS-SDK说明文档</a></li>
 </ol>
 <h2 id="-">入门之后...</h2>
 <ol>
